--- a/descobertas.html
+++ b/descobertas.html
@@ -7,6 +7,16 @@
 </head>
 <body>
   <header>
+    <nav>
+    <ul style="display: flex; justify-content: space-between;">
+      <li><a href="index.html">Página inicial</a></li>
+      <li><a href="noticias.html">Notícias</a></li>
+      <li><a href="descobertas.html">Descobertas</a></li>
+      <li><a href="contato.html">Contato</a></li>
+    </ul>
+  </nav>
+</header>
+
     <img src="logo.png" alt="Logotipo">
     <h1>Descobertas</h1>
   </header>
