--- a/noticias.html
+++ b/noticias.html
@@ -1,3 +1,13 @@
+<header>
+  <nav>
+    <ul style="display: flex; justify-content: space-between;">
+      <li><a href="index.html">Página inicial</a></li>
+      <li><a href="noticias.html">Notícias</a></li>
+      <li><a href="descobertas.html">Descobertas</a></li>
+      <li><a href="contato.html">Contato</a></li>
+    </ul>
+  </nav>
+</header>
 <section id="noticias">
     <h2>Notícias</h2>
     <ul>
